--- a/src/index.html
+++ b/src/index.html
@@ -3,13 +3,17 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="">
-    <meta name="keywords" content="">
+    <meta name="description" content="London based band who play a variety of smooth soul classics from artists such as D'Angelo, Lynden David Hall, Donny Hathaway, Bill Withers, Donell Jones, Ginuwine and Blackstreet.">
+    <meta name="keywords" content="Soul, Music, Band, Function, London, Weddings, Events, Cool, Trio, Duo">
 
+    <meta property="og:url" content="https://www.soulponies.co.uk">
+    <meta property="og:type" content="website">
+    <meta property="fb:admins" content="soulponies">
+    <meta name="fb_admins_meta_tag" content="soulponies">
+    <meta property="og:site_name" content="soulponies">
+    <link href="//db.onlinewebfonts.com/c/c4a64740ecb71342cea0a87b66ee15e0?family=PhosphateInline" rel="stylesheet" type="text/css"/>
 
-    
-
-    <title>Soul Ponies</title>
+    <title>Soul Ponies | London Soul Band | Functions, Weddings, Events</title>
   </head>
   <body>
     <div id="root"></div>
